--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -16,4 +16,13 @@
 
 <p>Join us on <a href="https://discord.gg/hkvp9uPA" target="_new">Discord</a> to give feedback and suggestions!</p>
 
+<hr>
+
+<h2>News</h2>
+<% versions.forEach(version => {%>
+  <h3>New version of <%=version.Game.name %> <i>(<%=version.beta ? "beta" : "release"%>)</i></h3>
+  <h4><%=version.formattedCreatedAt() %></h4>
+  <p><%- version.notesHTML() -%></p>
+<% }) %>
+
 <%- include('partials/footer') %>
