--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
     <style>
       body {
         margin-top: 0;
