grid layout, moveElement keeps anchored to the parent

--- a/game-core/client/style.scss
+++ b/game-core/client/style.scss
@@ -199,7 +199,7 @@ button {
         margin: 2px 0 0 2px;
       }
     }
-    &[layout="splay"] {
+    &[layout="splay"], &[layout="grid"] {
       display: grid;
       > .positioned-piece {
         position: relative;
