--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -169,9 +169,20 @@
     }
     #tableau {
       height: 170px;
-      width: 100%;
+      width: 1200px;
       position: absolute;
       top: 0px;
+      left: 20px;
+      [data-players="3"] &, [data-players="4"] & {
+        width: 800px;
+      }
+    }
+    #souls {
+      height: 170px;
+      width: 150px;
+      position: absolute;
+      top: 0px;
+      right: 20px;
     }
     #hand {
       height: 120px;
