correct counter-on-card behaviour

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -242,7 +242,7 @@
       border-radius: 7px;
     }
     .counter {
-      bottom: 10px;
+      top: 60px;
       left: 2px;
       color: black;
       font-weight: bold;
