--- a/game-core/client/style.scss
+++ b/game-core/client/style.scss
@@ -227,6 +227,7 @@ button {
     user-drag: none;
     -webkit-user-drag: none;
     -moz-user-drag: none;
+    pointer-events: none;
   }
   .hilited {
     outline: 5px solid rgba(255,255,0,.5)
