--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -19,10 +19,17 @@
 <hr>
 
 <h2>News</h2>
-<% versions.forEach(version => {%>
-  <h3>New version of <%=version.Game.name %> <i>(<%=version.beta ? "beta" : "release"%>)</i></h3>
-  <h4><%=version.formattedCreatedAt() %></h4>
-  <p><%- version.notesHTML() -%></p>
+<% messagesAndVersions.forEach(version => {%>
+  <% if (version.Game) { %>
+    <h3>New version of <%=version.Game.name %> <i>(<%=version.beta ? "beta" : "release"%>)</i></h3>
+    <h4><%=version.formattedCreatedAt() %></h4>
+    <p><%- version.notesHTML() -%></p>
+  <% } else { %>
+    <h3><%=version.title%></h3>
+    <h4><%=version.formattedCreatedAt() %></h4>
+    <p><%- version.notesHTML() -%></p>
+  <% } %>
+
 <% }) %>
 
 <%- include('partials/footer') %>
