--- a/game-core/client/style.scss
+++ b/game-core/client/style.scss
@@ -69,6 +69,9 @@ button {
       }
       &.reset {
         background: #900;
+        &:hover {
+          background: #f99;
+        }
       }
       &:hover {
         background: #999;
