Convert powergrid assets to same format

--- a/powergrid/client/style.scss
+++ b/powergrid/client/style.scss
@@ -162,7 +162,7 @@
         width: 50px;
         display: inline-block;
         text-align: center;
-        background: url(images/coin.png);
+        background: url("coin.png");
         background-size: 100%;
         height: 50px;
         margin: 0 5px;
