--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -2,21 +2,19 @@
 
 <h1>Boardzilla</h1>
 
-<h2>Boardzilla is a framework for making and playing board games.</h2>
+<p>Boardzilla is a framework for making and playing board games.</p>
 
-<p>Currently, we have implemented <a href="https://foursouls.com/">The Binding of Isaac: Four Souls</a> as our first game on the platform for testing and feature development.</p>
-
-<h2>How to play</h2>
-
-<ol>
-  <li><a href="/register">Create your account</a></li>
-  <li><a href="/sessions">Create a new game</a></li>
-  <li>Share your game URL with other player(s)</li>
-</ol>
-
-<p>Join us on <a href="https://discord.gg/hkvp9uPA" target="_new">Discord</a> to give feedback and suggestions!</p>
-
-<hr>
+<h2>Games</h2>
+<% games.forEach(game => { %>
+  <div>
+  <img src="/game/<%=game.id%>/banner" style="float: right; width: 300px">
+  <h3><%=game.friendlyName%></h3>
+  <input type="button" onclick="location.href='/make/<%=game.id%>';" value="Play now!" />
+  <p><%-game.descriptionHTML()%></p>
+  </div>
+  <br clear="all">
+  <hr>
+<% }) %>
 
 <h2>News</h2>
 <% messagesAndVersions.forEach(version => {%>
