--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="stylesheet" href="/water.css">
     <script async src="https://cdn.splitbee.io/sb.js"></script>
     <style>
       body {
