got build working

--- a/powergrid/client/style.scss
+++ b/powergrid/client/style.scss
@@ -301,7 +301,7 @@
     }
   }
 
-  .resource {
+  .Resource {
     font-family: system-ui;
     line-height: 10px;
     &[type=coal] {
@@ -334,7 +334,7 @@
     width: 15px;
   }
 
-  .card {
+  .Card {
     width: 75px;
     height: 75px;
     padding: 20px 10px;
